# backend

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY_GUIDE.md  Dockerfile  Huynh.md  Makefile  Phieu_SU26SE083.docx  README.md  TASK-DOMAIN-DOCS.md  TASK.md  alembic.ini  compose.deploy.yml  compose.yml  docker-compose.yml  harness.toml  pyproject.toml
.ai/: architecture-rules.md  coding-rules.md  commit-rules.md  naming-rules.md  review-checklist.md  testing-rules.md
.claude/sessions/: .last_inbox_check  broadcast.md
.claude/skills/backend-api/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  030e11901603_add_lead_scores_table.py  0f45110ee4b3_add_deal_tasks_table.py  0ff897c5a8db_merge_heads.py  2e72182da01e_replace_deal_tasks_with_projects_and_.py  35462d0ecda7_add_freelancer_profile_fields_to_users.py  3a951df6b338_merge_projects_and_desired_timeline_.py  4012c83d6e60_add_proof_columns_to_lead_scores.py  56e20fd0474e_add_notifications_table.py  57995864b173_merge_heads.py  654a48c2b861_merge_heads.py  a0b1c2d3e4f5_add_projects_and_tasks_tables.py  a3430072765c_add_deal_attachments_table.py  a47770745920_extend_lead_scores_with_qualification_.py  bb2f7c75ecd9_add_intake_form_configs_and_intake_form_.py  d1c1a6781d25_add_project_type_service_category_.py  d8afe394da6d_add_ai_jobs_table.py  dc9c988de307_add_ai_qualification_signal_fields_to_.py  e18bf4674da1_merge_heads.py  e1e4d3b18786_replace_client_tags_with_description.py  e3f359c35eaf_add_ai_qualification_signal_fields_to_.py  e59ec510b7af_add_deal_intakes_table.py  f1a2b3c4d5e6_add_share_token_to_invoices.py  f85cb132e701_add_unique_constraint_on_users_phone.py  g2b3c4d5e6f7_add_intake_share_token_to_users.py  h3c4d5e6f7a8_add_archived_to_contract_status.py  h3c4d5e6f7a8_add_projects_and_tasks_tables.py  i4d5e6f7a8b9_add_desired_timeline_to_deals.py  j5e6f7a8b9c0_add_ai_qualification_rich_fields_to_deals.py  k6f7a8b9c0d1_merge_heads.py  l7g8h9i0j1k2_add_document_to_deals.py  m8h9i0j1k2l3_add_profession_fields_to_deals.py  n2b3c4d5e6f7_link_intake_to_deal.py  n9i0j1k2l3m4_merge_heads.py  n9o0p1q2r3s4_add_subscription_payments.py  p1q2r3s4t5u6_add_subscription_expired_billing_event.py
contracts/: openapi.yaml
docs/adr/: ADR-001-modular-monolith.md  ADR-002-fastapi.md  ADR-003-postgresql.md  ADR-004-celery.md  ADR-005-langchain.md  ADR-006-ai-facade.md  ADR-007-domain-driven-modules.md
docs/architecture/: ARCHITECTURE.md  dependency-map.md  module-map.md  system-context.md
docs/database/: conceptual-erd.md  logical-erd.md  physical-erd.md  schema.sql
docs/domains/: INDEX.md  README.md  admin.md  ai.md  analytics.md  auth.md  clients.md  contracts.md  deals.md  invoices.md  proposals.md  reminders.md  subscriptions.md  users.md
docs/domains/aggregates/: client-aggregate.md  contract-aggregate.md  deal-aggregate.md  invoice-aggregate.md  proposal-aggregate.md  reminder-aggregate.md  subscription-aggregate.md  user-aggregate.md
docs/postman/: 00_README.txt  01_auth.txt  02_users.txt  03_clients.txt  04_deals.txt  05_proposals.txt  06_intake_form.txt  07_admin.txt  solodesk_collection.json  solodesk_environment.json
docs/process/: definition-of-done.md
scripts/: agent_check.py  bootstrap.py  reset_db.py  seed.py  simulate_payment_callback.py
src/: main.py
src/ai/: facade.py
src/ai/contract_generator/: chain.py
src/ai/contract_generator/prompts/: system.txt
src/ai/contract_generator/schemas/: contract_content.py
src/ai/followup_generator/: chain.py
src/ai/followup_generator/api/: router.py
src/ai/followup_generator/prompts/: system.txt
src/ai/followup_generator/schemas/: followup.py
src/ai/knowledge/common/: qualification-framework.md
src/ai/lead_qualifier/: chain.py  prompt_builder.py  retriever.py  scoring.py  test_ai_app.py
src/ai/lead_qualifier/api/: router.py
src/ai/lead_qualifier/application/: service.py
src/ai/lead_qualifier/prompts/: prompt.txt  prompts.txt  system.txt
src/ai/lead_qualifier/schemas/: request.py  response.py
src/ai/proposal_generator/: chain.py  pricing.py  test_proposal_gen.py
src/ai/proposal_generator/api/: router.py
src/ai/proposal_generator/application/: render.py  service.py
src/ai/proposal_generator/prompts/: prompts.txt  system.txt
src/ai/proposal_generator/schemas/: ProposalContent.py  ProposalDocument.py  proposal_content.py  proposal_document.py  proposal_generation_input.py
src/ai/proposal_generator/templates/: template.html
src/ai/shared/: base.py  json_output.py  prompt.py  text_coercion.py  token_usage.py
src/config/: settings.py
src/infrastructure/celery/: app.py
src/infrastructure/database/: base.py  models.py  session.py
src/infrastructure/database/seeders/: __init__.py  admin.py  base.py  clients.py  plans.py  run.py
src/infrastructure/redis/: client.py
src/infrastructure/storage/: object_storage.py
src/integrations/momo/: client.py
src/integrations/storage/: client.py  s3_client.py
src/modules/admin/api/: router.py
src/modules/admin/application/: service.py
src/modules/intake_form/: professions.py
src/modules/payments/: schemas.py
src/shared/dependencies/: ai.py  auth.py  db.py  payments.py  storage.py
src/shared/domain/: base.py
src/shared/email/: smtp.py
src/shared/events/: bus.py
src/shared/exceptions/: domain.py  http.py
src/shared/logging/: __init__.py  config.py  context.py  middleware.py  redaction.py  sampling.py
src/shared/pagination/: models.py
src/shared/rate_limit/: __init__.py  limiter.py
src/shared/responses/: __init__.py  error.py  pagination.py  response.py
src/shared/security/: passwords.py
src/workers/ai_jobs/: tasks.py
src/workers/pdf_jobs/: tasks.py
src/workers/reminder_jobs/: tasks.py
src/workers/subscription_jobs/: tasks.py
tests/: conftest.py
tests/integration/: test_seeders.py
tests/integration/ai/: test_lead_qualifier_api.py
tests/unit/workers/: test_ai_jobs_tasks.py
(+303 files in other folders)
